; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_anal_tp.c_cond_invert.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_anal_tp.c_cond_invert.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@.str = private unnamed_addr constant [28 x i8] c"Unhandled conditional swap\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i32)* @cond_invert to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cond_invert(%struct.TYPE_3__* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %11 [
    i32 129, label %7
    i32 128, label %8
    i32 131, label %9
    i32 130, label %10
  ]

7:                                                ; preds = %2
  store i32 130, i32* %3, align 4
  br label %20

8:                                                ; preds = %2
  store i32 131, i32* %3, align 4
  br label %20

9:                                                ; preds = %2
  store i32 128, i32* %3, align 4
  br label %20

10:                                               ; preds = %2
  store i32 129, i32* %3, align 4
  br label %20

11:                                               ; preds = %2
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %11
  %17 = call i32 @eprintf(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0))
  br label %18

18:                                               ; preds = %16, %11
  br label %19

19:                                               ; preds = %18
  store i32 0, i32* %3, align 4
  br label %20

20:                                               ; preds = %19, %10, %9, %8, %7
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}

declare dso_local i32 @eprintf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
